chore: Update dependences

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,7 @@
+# PaddleOCR模型目录
 model_dir: "model/"
 
+# 大模型配置
 retriever_config:
   module_name: "retriever"
   model_name: "zyw0605688/gte-large-zh:latest"
