--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,8 @@ aiohttp==3.12.14
     # via langchain-community
 aiosignal==1.4.0
     # via aiohttp
-altgraph==0.17.4
-    # via pyinstaller
 annotated-types==0.7.0
     # via pydantic
-antlr4-python3-runtime==4.9.3
-    # via omegaconf
 anyio==4.9.0
     # via
     #   httpx
@@ -59,9 +55,7 @@ colorama==0.4.6
 coloredlogs==15.0.1
     # via onnxruntime-gpu
 colorlog==6.9.0
-    # via
-    #   paddlex
-    #   rapidocr
+    # via paddlex
 cssselect==1.3.0
     # via premailer
 cssutils==2.11.1
@@ -195,23 +189,17 @@ multidict==6.6.3
     #   yarl
 mypy-extensions==1.1.0
     # via typing-inspect
-nuitka==2.7.12
-    # via src-python (./pyproject.toml)
 numpy==2.2.6
     # via
     #   src-python (./pyproject.toml)
     #   langchain-community
     #   onnxruntime-gpu
     #   opencv-contrib-python
-    #   opencv-python
     #   paddlex
     #   pandas
-    #   rapidocr
     #   scikit-learn
     #   scipy
     #   shapely
-omegaconf==2.3.0
-    # via rapidocr
 onnxruntime-gpu==1.22.0
     # via src-python (./pyproject.toml)
 openai==1.97.0
@@ -220,12 +208,8 @@ openai==1.97.0
     #   paddlex
 opencv-contrib-python==4.10.0.84
     # via paddlex
-opencv-python==4.12.0.88
-    # via rapidocr
 openpyxl==3.1.5
     # via paddlex
-ordered-set==4.1.0
-    # via nuitka
 orjson==3.11.0
     # via langsmith
 packaging==25.0
@@ -236,21 +220,16 @@ packaging==25.0
     #   marshmallow
     #   onnxruntime-gpu
     #   paddlex
-    #   pyinstaller
-    #   pyinstaller-hooks-contrib
 paddleocr==3.1.0
     # via src-python (./pyproject.toml)
 paddlex==3.1.3
     # via paddleocr
 pandas==2.3.1
     # via paddlex
-pefile==2023.2.7
-    # via pyinstaller
 pillow==11.3.0
     # via
     #   src-python (./pyproject.toml)
     #   paddlex
-    #   rapidocr
 premailer==3.10.0
     # via paddlex
 prettytable==3.16.0
@@ -266,9 +245,7 @@ proxy-tools==0.1.0
 py-cpuinfo==9.0.0
     # via paddlex
 pyclipper==1.3.0.post6
-    # via
-    #   paddlex
-    #   rapidocr
+    # via paddlex
 pycparser==2.22
     # via cffi
 pydantic==2.11.7
@@ -287,10 +264,6 @@ pydantic-settings==2.10.1
     # via langchain-community
 pygments==2.19.2
     # via rich
-pyinstaller==6.14.2
-    # via src-python (./pyproject.toml)
-pyinstaller-hooks-contrib==2025.6
-    # via pyinstaller
 pypdfium2==4.30.1
     # via paddlex
 pyreadline3==3.5.4
@@ -309,8 +282,6 @@ pytz==2025.2
     # via pandas
 pywebview==5.4
     # via src-python (./pyproject.toml)
-pywin32-ctypes==0.2.3
-    # via pyinstaller
 pyyaml==6.0.2
     # via
     #   src-python (./pyproject.toml)
@@ -318,14 +289,10 @@ pyyaml==6.0.2
     #   langchain
     #   langchain-community
     #   langchain-core
-    #   omegaconf
     #   paddleocr
     #   paddlex
-    #   rapidocr
     #   uvicorn
 pyzbar==0.1.9
-    # via src-python (./pyproject.toml)
-rapidocr==3.2.0
     # via src-python (./pyproject.toml)
 regex==2024.11.6
     # via
@@ -339,7 +306,6 @@ requests==2.32.4
     #   langsmith
     #   paddlex
     #   premailer
-    #   rapidocr
     #   requests-toolbelt
     #   tiktoken
 requests-toolbelt==1.0.0
@@ -365,20 +331,13 @@ scipy==1.15.3
 sentry-sdk==2.33.0
     # via fastapi-cloud-cli
 setuptools==80.9.0
-    # via
-    #   src-python (./pyproject.toml)
-    #   pyinstaller
-    #   pyinstaller-hooks-contrib
+    # via src-python (./pyproject.toml)
 shapely==2.1.1
-    # via
-    #   paddlex
-    #   rapidocr
+    # via paddlex
 shellingham==1.5.4
     # via typer
 six==1.17.0
-    # via
-    #   python-dateutil
-    #   rapidocr
+    # via python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
@@ -409,7 +368,6 @@ tqdm==4.67.1
     # via
     #   huggingface-hub
     #   openai
-    #   rapidocr
 typer==0.16.0
     # via
     #   fastapi-cli
@@ -470,6 +428,4 @@ win32-setctime==1.2.0
 yarl==1.20.1
     # via aiohttp
 zstandard==0.23.0
-    # via
-    #   langsmith
-    #   nuitka
+    # via langsmith
